--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
     <main>
       <section class="card">
         <img src="image-qr-code.png" alt="image of a qr code" />
-        <h1>Improve your front-end skills by building projects</h1>
+        <h1>Hey there, Gaurav this side.</h1>
         <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
+          Scan the QR code to dive deep into my World which takes you apparently nowhere.
         </p>
         <div class="attribution">
           Challenge by
