--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <section class="card">
         <img src="image-qr-code.png" alt="image of a qr code" />
-        <h1>Hey there, Gaurav this side.</h1>
+        <h1>Hey there, Gaurav this side. HeHe!</h1>
         <p>
           Scan the QR code to dive deep into my World which takes you apparently nowhere.
         </p>
