--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
           Scan the QR code to dive deep into my World which takes you apparently nowhere.
         </p>
         <div class="attribution">
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. Coded by <a href="https://github.com/valleyman89">Steven Rolph</a>.
+          Gomawo
+         
+            Coded by <a href="https://github.com/gauravhere24">Gaurav</a>.
         </div>
       </section>
     </main>
