--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
           Scan the QR code to dive deep into my World which takes you apparently nowhere.
         </p>
         <div class="attribution">
-          Gomawo.
-         
-            Coded by <a href="https://github.com/gauravhere24">Gaurav</a>.
+          Gomawo.Coded by <a href="https://github.com/gauravhere24">Gaurav</a>.
         </div>
       </section>
     </main>
